force-app/main/default/objects/Product2/fields/Carryover_Factor__c.field-meta.xml
<CustomField>
    <fullName>Carryover_Factor__c</fullName>
    <label>Carryover Factor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>