force-app/main/default/objects/Product2/fields/Overage_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Overage_Surcharge__c</fullName>
    <label>Overage Surcharge</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>