force-app/main/default/objects/Product2/fields/Usage_Term__c.field-meta.xml
<CustomField>
    <fullName>Usage_Term__c</fullName>
    <description>Frequency (in months) of the credit refresh</description>
    <inlineHelpText>Frequency (in months) of the credit refresh</inlineHelpText>
    <label>Usage Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>