force-app/main/default/objects/Product2/validationRules/Usage_Term_vs_Billing_Term.validationRule-meta.xml
<ValidationRule>
    <fullName>Usage_Term_vs_Billing_Term</fullName>
    <active>true</active>
    <description>The Billing Term must be greater than the Usage Term</description>
    <errorConditionFormula>SBQQ__SubscriptionTerm__c &lt; Usage_Term__c</errorConditionFormula>
    <errorMessage>The Subscription Term must be greater than the Usage Term</errorMessage>
</ValidationRule>